added hide checked function

--- a/index_shopping2.html
+++ b/index_shopping2.html
@@ -17,6 +17,11 @@
       <label for="shopping-list-entry">Add an item</label>
       <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
       <button type="submit">Add item</button>
+      <div>
+        <input type="checkbox" name="hide-checked-items" class="hide-checked-items">
+        <label for="hide-checked-items">Hide Checked Items</label>
+      </div>
+      
     </form>
 
     <ul class="shopping-list">
