added handle search function

--- a/index_shopping2.html
+++ b/index_shopping2.html
@@ -21,6 +21,10 @@
         <input type="checkbox" name="hide-checked-items" class="hide-checked-items">
         <label for="hide-checked-items">Hide Checked Items</label>
       </div>
+      <div>
+        <label for="shopping-list-entry">Search items</label>
+        <input type="text" name="shopping-list-search" class="js-shopping-list-search" placeholder="type search term">
+      </div>
       
     </form>
 
