--- a/index_shopping2.html
+++ b/index_shopping2.html
@@ -18,13 +18,14 @@
       <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
       <button type="submit">Add item</button>
       <div>
-        <input type="checkbox" name="hide-checked-items" class="hide-checked-items">
-        <label for="hide-checked-items">Hide Checked Items</label>
-      </div>
-      <div>
         <label for="shopping-list-entry">Search items</label>
         <input type="text" name="shopping-list-search" class="js-shopping-list-search" placeholder="type search term">
       </div>
+      <div class="checkbox-pos">
+        <input type="checkbox" name="hide-checked-items" class="hide-checked-items">
+        <label for="hide-checked-items">Hide Checked Items</label>
+      </div>
+
       
     </form>
 
@@ -40,39 +41,6 @@
           </button>
         </div>
       </li>
-      <li>
-        <span class="shopping-item">oranges</span>
-        <div class="shopping-item-controls">
-          <button class="shopping-item-toggle">
-            <span class="button-label">check</span>
-          </button>
-          <button class="shopping-item-delete">
-            <span class="button-label">delete</span>
-          </button>
-        </div>
-      </li>
-      <li>
-        <span class="shopping-item shopping-item__checked">milk</span>
-        <div class="shopping-item-controls">
-          <button class="shopping-item-toggle">
-            <span class="button-label">check</span>
-          </button>
-          <button class="shopping-item-delete">
-            <span class="button-label">delete</span>
-          </button>
-        </div>
-      </li>
-      <li>
-        <span class="shopping-item">bread</span>
-        <div class="shopping-item-controls">
-          <button class="shopping-item-toggle">
-            <span class="button-label">check</span>
-          </button>
-          <button class="shopping-item-delete">
-            <span class="button-label">delete</span>
-          </button>
-        </div>
-      </li> -->
     </ul>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
