made checkbox label fire for listener

--- a/index_shopping2.html
+++ b/index_shopping2.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
   <title>Shopping List</title>
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
   <link rel="stylesheet" href="index_shopping2.css">
 </head>
 <body>
@@ -22,7 +20,7 @@
         <input type="text" name="shopping-list-search" class="js-shopping-list-search" placeholder="type search term">
       </div>
       <div class="checkbox-pos">
-        <input type="checkbox" name="hide-checked-items" class="hide-checked-items">
+        <input type="checkbox" name="hide-checked-items" class="hide-checked-items" id="hide-checked-items">
         <label for="hide-checked-items">Hide Checked Items</label>
       </div>
 
@@ -30,8 +28,8 @@
     </form>
 
     <ul class="shopping-list">
-      <!-- <li>
-        <span class="shopping-item">apples</span>
+      <li>
+        <!-- <span class="shopping-item">apples</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
             <span class="button-label">check</span>
@@ -40,7 +38,7 @@
             <span class="button-label">delete</span>
           </button>
         </div>
-      </li>
+      </li> -->
     </ul>
   </div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
