--- a/index_shopping2.html
+++ b/index_shopping2.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="index_shopping2.css">
 </head>
 <body>
-
   <div class="container">
     <h1>Shopping List</h1>
 
@@ -19,12 +18,12 @@
         <label for="shopping-list-entry">Search items</label>
         <input type="text" name="shopping-list-search" class="js-shopping-list-search" placeholder="type search term">
       </div>
+
       <div class="checkbox-pos">
-        <input type="checkbox" name="hide-checked-items" class="hide-checked-items" id="hide-checked-items">
+        <input type="checkbox" name="hide-checked-items" class="hide-checked-items show-checked-items" id="hide-checked-items">
         <label for="hide-checked-items">Hide Checked Items</label>
       </div>
 
-      
     </form>
 
     <ul class="shopping-list">
@@ -41,7 +40,9 @@
       </li> -->
     </ul>
   </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="index_shopping2.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js">
+  </script>
+  <script src="index_shopping2.js">
+  </script>
 </body>
 </html>
