--- a/index_shopping2.html
+++ b/index_shopping2.html
@@ -9,23 +9,19 @@
 <body>
   <div class="container">
     <h1>Shopping List</h1>
-
     <form id="js-shopping-list-form">
       <label for="shopping-list-entry">Add an item</label>
-      <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
+      <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli" required>
       <button type="submit">Add item</button>
       <div>
         <label for="shopping-list-entry">Search items</label>
         <input type="text" name="shopping-list-search" class="js-shopping-list-search" placeholder="type search term">
       </div>
-
       <div class="checkbox-pos">
         <input type="checkbox" name="hide-checked-items" class="hide-checked-items show-checked-items" id="hide-checked-items">
         <label for="hide-checked-items">Hide Checked Items</label>
       </div>
-
     </form>
-
     <ul class="shopping-list">
       <li>
         <!-- <span class="shopping-item">apples</span>
